[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorium-sdk"
version = "0.1.0"
description = "Python SDK for the Tensorium Proof-of-Work chain"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Tensorium Labs" }
]
dependencies = [
  "bech32>=1.2.0",
  "ecdsa>=0.19.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.urls]
Homepage = "https://tensoriumlabs.com"
Documentation = "https://docs.tensoriumlabs.com"
Repository = "https://github.com/rygroup-dev/tensorium-sdk-py"

[tool.setuptools.package-data]
tensorium_sdk = ["py.typed"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
